--- a/package.json
+++ b/package.json
@@ -7,11 +7,24 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "pages": "wrangler pages dev --compatibility-date=2023-12-18 -- astro dev",
+    "deploy": "astro build && wrangler pages deploy ./dist"
   },
   "dependencies": {
-    "astro": "^4.11.1",
     "@astrojs/check": "^0.7.0",
+    "@astrojs/mdx": "^3.1.2",
+    "@astrojs/react": "^3.6.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "astro": "^4.11.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
+  },
+  "devDependencies": {
+    "wrangler": "^3.61.0"
   }
 }
