--- a/subfield/package.json
+++ b/subfield/package.json
@@ -1,12 +1,22 @@
 {
 	"name": "subfield",
-	"version": "0.1.3",
-	"module": "index.ts",
-	"type": "module",
+	"version": "0.2.6",
+	"exports": {
+		"./node": {
+			"import": "./index-node.ts",
+			"require": "./index-node.ts"
+		},
+		"./web": {
+			"import": "./index-web.ts",
+			"require": "./index-web.ts"
+		}
+	},
+	"main": "./index-node.ts",
+	"browser": "./index-web.ts",
 	"description": "",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/heapswap/subfield"
+		"url": "git+https://github.com/heapswap/subfield.git"
 	},
 	"license": "MPL-2.0",
 	"author": {
@@ -14,8 +24,7 @@
 		"url": "https://github.com/heapswap"
 	},
 	"scripts": {
-		"build": "bash ../.sh/build-subfield.sh",
-		"publish": "npm run build && npm publish"
+		"build": "bash .sh/build-subfield.sh"
 	},
 	"dependencies": {},
 	"devDependencies": {
@@ -23,12 +32,5 @@
 	},
 	"peerDependencies": {
 		"typescript": "^5.0.0"
-	},
-	"files": [
-		"index.ts",
-		"pkg/index.js",
-		"pkg/index.d.ts",
-		"pkg/index_bg.wasm",
-		"pkg/index_bg.wasm.d.ts"
-	]
+	}
 }
